--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <meta http-equiv="refresh" content="10" />
+    <meta http-equiv="refresh" content="5" />
     <title>Document</title>
   </head>
   <body>
-    <h1>agnwwgnanf</h1>
+    <!-- Types of CSS-styling : -->
+    <!-- 1.Inline (E.g On index.HTML <p style="Property:value"><p>)-->
+    <!-- 2.Internal (E.g On index.HTML <Style> p{Property} <Style> <p><p>)-->
+    <!-- 3.External (E.g Link CSS to HTML On styles.css p{Property} then on index.HTML <p><p>)-->
+
+    <h1>Fonts & Selectors</h1>
+    <hr />
+    <p class="Test-fonts-class">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sit ad
+      magnam in quisquam aspernatur ducimus labore placeat aliquid voluptates
+      natus possimus ut soluta illum voluptatibus tenetur, dolores atque
+      deserunt.
+    </p>
+    <hr />
+    <!--The ID selector will prevent other elements outside of it from affect it-->
+    <p1 id="Test-fonts-id" class="Test-fonts-class">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat eveniet
+      iure et quis accusamus impedit. Sit voluptate, ratione est reprehenderit,
+      ipsam temporibus quas itaque odit earum assumenda sequi laudantium iure?
+    </p1>
+    <hr />
+    <p2 class="Test-fonts-class" id="Test-fonts-id">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, est sit et,
+      laudantium corrupti culpa quidem dolor eaque distinctio atque voluptatum
+      animi sint voluptates perferendis, dolore inventore sequi. Distinctio,
+      corporis.
+    </p2>
   </body>
 </html>
