--- a/index.html
+++ b/index.html
@@ -13,27 +13,39 @@
     <!-- 2.Internal (E.g On index.HTML <Style> p{Property} <Style> <p><p>)-->
     <!-- 3.External (E.g Link CSS to HTML On styles.css p{Property} then on index.HTML <p><p>)-->
 
-    <h1>Fonts & Selectors</h1>
     <hr />
+    <h1><u>Fonts & Selectors</u></h1>
+    <!--The ID selector is used for a single unique element-->
+    <h2 id="Test-fonts-id">Sub-heading</h1>
+    <!-- The CLASS selector is used for more that one element-->
     <p class="Test-fonts-class">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sit ad
       magnam in quisquam aspernatur ducimus labore placeat aliquid voluptates
       natus possimus ut soluta illum voluptatibus tenetur, dolores atque
       deserunt.
     </p>
-    <hr />
-    <!--The ID selector will prevent other elements outside of it from affect it-->
-    <p1 id="Test-fonts-id" class="Test-fonts-class">
+    <p1 class="Test-fonts-class">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat eveniet
       iure et quis accusamus impedit. Sit voluptate, ratione est reprehenderit,
       ipsam temporibus quas itaque odit earum assumenda sequi laudantium iure?
     </p1>
-    <hr />
-    <p2 class="Test-fonts-class" id="Test-fonts-id">
+    <br />
+    <br />
+    <p2 class="Test-fonts-class">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, est sit et,
       laudantium corrupti culpa quidem dolor eaque distinctio atque voluptatum
       animi sint voluptates perferendis, dolore inventore sequi. Distinctio,
       corporis.
     </p2>
+    <hr />
+
+    <h1><u>Borders</u></h1>
+    <p id="Test-border">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptates
+      voluptatum ratione, laudantium sunt quos facilis eum? Eveniet soluta
+      ducimus labore aut ratione est laudantium molestiae minus, sint tenetur
+      facere!
+    </p>
+    <hr />
   </body>
 </html>
