Backgrounds (+extras folder)
- Added backgrounds
- Added extras folder with material

--- a/index.html
+++ b/index.html
@@ -47,5 +47,24 @@
       facere!
     </p>
     <hr />
+
+    <h1><u>Backgrounds</u></h1>
+    <p id="Test-background1">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+      Quam, nostrum illum! Sunt perferendis laboriosam enim reprehenderit fugit obcaecati 
+      debitis consequuntur? Eaque dignissimos aliquam rem corrupti aperiam omnis quis ut 
+      illum!
+    </p>
+    <p id="Test-background2">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad facere aut aliquam ab 
+      laboriosam molestias, a laudantium blanditiis sit perferendis impedit, iste veniam natus 
+      non deleniti optio iusto sequi perspiciatis.
+    </p>
+    <p id="Test-background3">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam 
+      facilis possimus eum. Tempora consequatur distinctio repellat eligendi sequi similique
+      ducimus sapiente voluptatum. Nulla corporis eos officiis aut voluptas voluptate vel.
+      </p>
+      <hr>
   </body>
 </html>
