Margins (+move around)
- Added margins
- Moved borders

--- a/index.html
+++ b/index.html
@@ -39,15 +39,6 @@
     </p2>
     <hr />
 
-    <h1><u>Borders</u></h1>
-    <p id="Test-border">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptates
-      voluptatum ratione, laudantium sunt quos facilis eum? Eveniet soluta
-      ducimus labore aut ratione est laudantium molestiae minus, sint tenetur
-      facere!
-    </p>
-    <hr />
-
     <h1><u>Backgrounds</u></h1>
     <p id="Test-background1">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
@@ -66,5 +57,29 @@
       ducimus sapiente voluptatum. Nulla corporis eos officiis aut voluptas voluptate vel.
       </p>
       <hr>
+
+    <h1><u>Borders</u></h1>
+    <p id="Test-border">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptates
+      voluptatum ratione, laudantium sunt quos facilis eum? Eveniet soluta
+      ducimus labore aut ratione est laudantium molestiae minus, sint tenetur
+      facere!
+    </p>
+    <hr />
+
+    <h1><u>Margins</u></h1>
+    <p id="Test-margin1">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maxime 
+      id error aliquid, aperiam vero eos itaque nesciunt reiciendis natus quisquam earum 
+      praesentium illo dolor rerum tempore! Porro, quaerat reiciendis?
+    </p>
+
+    <p id="Test-margin2">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maxime 
+      id error aliquid, aperiam vero eos itaque nesciunt reiciendis natus quisquam earum 
+      praesentium illo dolor rerum tempore! Porro, quaerat reiciendis?
+    </p>
+    <hr>
+
   </body>
 </html>
