--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </p>
       <hr>
 
-    <h1><u>Borders</u></h1>
+    <h1><u>Borders & Padding</u></h1>
     <p id="Test-border">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptates
       voluptatum ratione, laudantium sunt quos facilis eum? Eveniet soluta
@@ -81,5 +81,13 @@
     </p>
     <hr>
 
+    <h1><u>Floats</u></h1>
+    <img id="Test-float1" src="/extras/Background.png" alt="Image" width="75px" height="75px">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit repellat magni, 
+      minima ullam omnis ad vel accusamus. Velit voluptate cum eum, nam vel voluptas molestias 
+      non reiciendis consectetur adipisci tempora!
+    </p>
+    <hr>
   </body>
 </html>
