Pseudo-classes & Nth-child
- Added Pseudo-classes & Nth-child

--- a/index.html
+++ b/index.html
@@ -89,5 +89,25 @@
       non reiciendis consectetur adipisci tempora!
     </p>
     <hr>
+
+    <h1><u>Pseudo-classes</u></h1>
+    <a href="https://www.google.co.uk/" target="_blank">Google Link</a>
+    <hr>
+
+    <h1><u>Nth-child</u></h1>
+    <ul id="Nth-child1">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+    </ul>
+    <br>
+    
+    <ul id="Nth-child2">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+    </ul>
   </body>
 </html>
