--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
     </p2>
     <hr />
 
+    <h1><u>Shadows</u></h1>
+    <h3 id="Test-shadow1">TEST ONE</h3>
+    <h3 id="Test-shadow2">TEST TWO</h3>
+    <hr>
+
     <h1><u>Backgrounds</u></h1>
     <p id="Test-background1">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
