--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <meta http-equiv="refresh" content="5" />
+    <!--NOTE : page refreshes so the animation will refresh each time-->
     <title>Document</title>
   </head>
   <body>
@@ -114,5 +114,16 @@
       <li>3</li>
       <li>4</li>
     </ul>
+    <hr>
+
+    <h1><u>Positions</u></h1>
+    <h3 id="Test-positioning1">Box</h3>
+    <h3 id="Test-positioning2">Box</h3>
+    <hr>
+    
+    <h1><u>Animations</u></h1>
+    <h3 id="Test-animation1">Box</h3>
+    <hr>
+
   </body>
 </html>
