--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <!-- 1.Inline (E.g On index.HTML <p style="Property:value"><p>)-->
     <!-- 2.Internal (E.g On index.HTML <Style> p{Property} <Style> <p><p>)-->
     <!-- 3.External (E.g Link CSS to HTML On styles.css p{Property} then on index.HTML <p><p>)-->
+      
+      <ul id="Text">
+        <li><a href="/grid.html">Grid</a></li>
+        <li><a href="/flexbox.html">Flexbox</a></li>
+    </ul>
 
     <hr />
     <h1><u>Fonts & Selectors</u></h1>
@@ -124,6 +129,5 @@
     <h1><u>Animations</u></h1>
     <h3 id="Test-animation1">Box</h3>
     <hr>
-
   </body>
 </html>
