Gird & Flexbox (+Overhaul)
- Added Flexbox
- Removed addition documents & links to them
- Moved grid to index.html & merged with flexbox

--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
     <!-- 1.Inline (E.g On index.HTML <p style="Property:value"><p>)-->
     <!-- 2.Internal (E.g On index.HTML <Style> p{Property} <Style> <p><p>)-->
     <!-- 3.External (E.g Link CSS to HTML On styles.css p{Property} then on index.HTML <p><p>)-->
-      
-      <ul id="Text">
-        <li><a href="/grid.html">Grid</a></li>
-        <li><a href="/flexbox.html">Flexbox</a></li>
-    </ul>
 
     <hr />
     <h1><u>Fonts & Selectors</u></h1>
@@ -128,6 +123,23 @@
     
     <h1><u>Animations</u></h1>
     <h3 id="Test-animation1">Box</h3>
+    <hr>
+
+    <h1><u>Grid & Flexbox</u></h1>
+    <div id="Grid-box">
+      <header>Header</header>
+      <article>
+        <div class="container">
+          <div class="item">Flexbox</div>
+          <div class="item">Flexbox</div>
+          <div class="item">Flexbox</div>
+          <div class="item">Flexbox</div>
+          <div class="item">Flexbox</div>
+        </div>
+      </article>
+      <aside>Sidebar</aside>
+      <footer>Footer</footer>
+    </div>
     <hr>
   </body>
 </html>
